removed overflow auto to avoid problems with modal body

--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -4150,7 +4150,7 @@ input[type="submit"].btn.btn-mini {
   z-index: 1050;
   width: 560px;
   margin: -250px 0 0 -280px;
-  overflow: auto;
+  /*overflow: auto;*/
   background-color: #ffffff;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -4189,9 +4189,9 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-body {
-  max-height: 400px;
+ /* max-height: 400px;*/
   padding: 15px;
-  overflow-y: auto;
+ /* overflow-y: auto; */
 }
 
 .modal-form {
